# bfc

./: .eslintrc.js  .gitignore  .prettierignore  Cargo.toml  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  tests  validator.info
.changeset/: config.json  slow-foxes-live.md
.config/: nextest.toml
.github/: CODEOWNERS
crates/sui-indexer-v0/: Cargo.toml
crates/sui-indexer-v0/benches/: indexer_benchmark.rs
crates/sui-indexer-v0/migrations/2023-09-04-065252_24h/: down.sql  up.sql
crates/sui-indexer-v0/migrations/2023-09-12-001033_proposals/: down.sql  up.sql
crates/sui-indexer-v0/migrations/2023-11-27-080218_votes/: down.sql  up.sql
crates/sui-indexer-v0/migrations/2023-12-13-070641_stake/: down.sql  up.sql
crates/sui-indexer-v0/migrations/2024-01-31-074151_nfts/: down.sql  up.sql
crates/sui-indexer-v0/migrations/2024-08-13-070641_reward/: down.sql  up.sql
crates/sui-indexer-v0/migrations/2024-08-19-070641_pending_reward/: down.sql  up.sql
crates/sui-indexer-v0/src/: benfen.rs  lib.rs  main.rs  schema.rs  test_utils.rs  types.rs  utils.rs
crates/sui-indexer-v0/src/apis/: benfen_api.rs  coin_api.rs  extended_api.rs  governance_api.rs  indexer_api.rs  mod.rs  move_utils.rs  read_api.rs  transaction_builder_api.rs  write_api.rs
crates/sui-indexer-v0/src/handlers/: checkpoint_handler.rs  mod.rs  pending_reward_handler.rs
crates/sui-indexer-v0/src/models/: address_stake.rs  checkpoints.rs  dao_proposals.rs  dao_votes.rs  epoch_stake.rs  events.rs  mining_nft.rs  mod.rs  network_overview.rs  network_segment_metrics.rs  objects.rs  pending_reward.rs  prices.rs  stake_reward.rs  system_state.rs  transactions.rs
crates/sui-indexer-v0/src/store/: indexer_store.rs  pg_indexer_store.rs
crates/sui-indexer-v0/tests/: integration_full_node_tests.rs  integration_tests.rs
docker/: readme
genesis/: add-validator-using-userip-dns.sh  add-validator-using-userip.sh  add-validator.sh  clean.sh  data.csv  generate-validator-key.sh  genesis.blob  parameters  readme.txt  replace-global-network-ip.sh  token-distribution-schedule  unsigned-genesis  validator-v1-account.key  validator-v1-network.key  validator-v1-worker.key  validator-v1.key  validator-v2-account.key  validator-v2-network.key  validator-v2-worker.key  validator-v2.key  validator-v3-account.key  validator-v3-network.key  validator-v3-worker.key  validator-v3.key  validator-v4-account.key  validator-v4-network.key  validator-v4-worker.key  validator-v4.key
narwhal/: README.md
nre/: sui_for_node_operators.md
scripts/: rotate_snapshots.py
sdk/bcs/: README.md  (+1 more)
(+2920 files in other folders)
