[package]
name = "sui-indexer-v0"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bcs.workspace = true
chrono.workspace = true
serde_with.workspace = true
clap.workspace = true
tap.workspace = true
diesel = { workspace = true, optional = true }
diesel-derive-enum = { workspace = true, optional = true }
futures.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
regex.workspace = true
tempfile.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-stream.workspace = true
url.workspace = true

fastcrypto = { workspace = true, features = ["copy_key"] }
mysten-metrics.workspace = true
sui-data-ingestion-core.workspace = true
sui-config.workspace = true
sui-core.workspace = true
sui-json.workspace = true
sui-json-rpc.workspace = true
sui-json-rpc-api.workspace = true
sui-json-rpc-types.workspace = true
sui-keys.workspace = true
sui-node.workspace = true
sui-open-rpc.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
sui-package-resolver.workspace = true
sui-protocol-config.workspace = true
sui-transaction-builder.workspace = true
sui-rest-api.workspace = true

telemetry-subscribers.workspace = true

move-core-types.workspace = true
move-bytecode-utils.workspace = true
move-binary-format.workspace = true

diesel_migrations.workspace = true
cached.workspace = true
rust_decimal = { version = "1", features = [ "maths" ] }
secrecy = "0.8.0"
downcast = "0.11.0"
moka = { version = "0.12.8", features = ["future"] }

[features]
pg_integration = []
default = ["postgres-feature"]
postgres-feature = ["diesel/postgres", "diesel/postgres_backend", "diesel-derive-enum/postgres"]
mysql-feature = ["diesel/mysql", "diesel/mysql_backend", "diesel-derive-enum/mysql"]

[dev-dependencies]
sui-keys.workspace = true
sui-move-build.workspace = true
sui-test-transaction-builder.workspace = true
test-cluster.workspace = true
ntest.workspace = true
criterion.workspace = true
simulacrum.workspace = true

[[bin]]
name = "bfc-indexer-v0"
path = "src/main.rs"
